--- a/bootscampdnc/index.html
+++ b/bootscampdnc/index.html
@@ -4,9 +4,65 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BootsacampDNC</title>
+    <title>Bootcamp DNC</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400&family=Poppins:wght@400;700&display=swap');
+        body {
+            margin:0px;
+            padding:0px;
+        }
+        #menu {
+            display:flex;
+            width:55%;
+            justify-content:space-around;
+            align-items:center;
+        }
+        #principal {
+            width:100%;
+            height:100px;
+            border: 1px solid black;
+            background-color: #303030;
+            display:flex;
+            justify-content:space-between;
+            align-items: center;
+            border-bottom:1px solid #BABABA ;
+
+        }
+        #principal div a {
+            font-size: 25px;
+            font-weight: 500;
+            color: #FFFFFF;
+            text-decoration:none;
+            font-family:'Inter';
+        }
+            #principal div a:hover {
+                color: #664c8f;
+            }
+        #principal button {
+            margin-right:3%;
+            background-color:#0C70F2;
+            border: 0px;
+            height: 40px;
+            width: 80px;
+            font-family: 'Inter';
+            font-style: normal;
+            font-weight: 600;
+            font-size: 20px;
+            line-height: 24px;
+            color: #FFFFFF;
+            box-shadow: 3px 2px 4px rgba(12, 112, 242, 0.25);
+
+        } 
+    </style>
 </head>
 <body>
-    
+    <nav id="principal">
+        <div id="menu">
+            <a href="">Home</a>
+            <a href="">Ultimas Edições</a>
+            <a href="">Requisitos para participar</a>
+        </div>
+        <button>Login</button>
+    </nav>
 </body>
 </html>
